--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="shortcut icon" type="image/png" href="img/favicon.png" />
-    <title>Pibesdey Put</title>
+    <title>Pibesdey Audy</title>
     <!-- Google Font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -27,7 +27,7 @@
         <div class="one">
             <h1 class="one">
                 Hi
-                <span id="name">Putra!</span>
+                <span id="name">Odyyy!</span>
             </h1>
             <p class="two" id="greetingText">Ultah yaaaaa?!!😌</p>
         </div>
@@ -41,23 +41,31 @@
         <div class="four">
             <div class="text-box">
                 <p class="hbd-chatbox">
-                    Habede adekkk! wkwkw udah tua adek aku gaiss 21 tahun ga tuh, btw wishnya yang baik-baik aja
-                    dunia akhirat deh pokoknya. Wish sendiri aja ya nanti gue aminin. Pokoknya sehat dan sukses selalu
-                    om, adek, musuh gue yang paling dabest👍
+                    Habede Odykuuh! wkwkw udah tua bestiee aku gaiss udah 22 tahun ga tuh, btw wishnya yang baik-baik aja
+                    dunia akhirat deh pokoknya. Wish sendiri dulu aja ya nanti aku aminin. Pokoknya sehat dan sukses selalu sayangkuuu
+                    bestie aku dikuliahan + temen magang yang paling dabest👍 hehe semoga dapet kerjaan yang enak ya dy! jujur kangen banget bangett hiks
+                    tapi semoga kamu sehat selalu yaaa! aku bingung mau nulis apa karna random banget bikin ginian udah pusing dluan wkwkwk tapi gapapa
+                    biar lucu aja hehe POKOKNYA APAPUN ITU YANG TERBAIK BUAT KAMU AKU DUKUNG 100%
+                    Makasih udah bertahan sampe disini yaaa... besok kita wisuda bareng!! (jadi sedihh
+                    Selamat memasuki dunia baruuuu yaa walaupun kita jarang ketemu atau chatan tapi please keep in touch!
+                    Apalagi kalo ada undangan asikkk
+                    Sampe kapanpun kamu tetep bestie aku hehe, maafin kalo aku punya salah yaa kalo bikin kesel juga maapin hehe
+                    Jangan marah2 ya odyyyyyy
+                    Pokoknyaa Saranghaeyo <3
                 </p>
                 <p class="fake-btn">Send</p>
             </div>
         </div>
 
         <div class="five">
-            <p class="idea-1">That's what I was going to send in WhatsApp...</p>
-            <p class="idea-2">But gajadiii.....</p>
+            <p class="idea-1">Sebenernya aku mau ngucapin di WhatsApp...</p>
+            <p class="idea-2">Tapi gajadiii.....karna aku tau pasti telat juga ini ngucapinnya hehe</p>
             <p class="idea-3">
-                Bcs males aja chat lo😺(canda), but this is for u so u should be<br>
+                Dan soalnya dah biasa juga, jadi aku bikin ini aja yakan biar kamu...<br>
                 <strong>Happy!</strong>
                 .
             </p>
-            <p class="idea-4">Because...</p>
+            <p class="idea-4">Karna...</p>
             <p class="idea-5">
                 It's <strong>Happy</strong> Birthday not <strong>Sad</strong> Birthday
                 <span>:)</span>
