--- a/index.html
+++ b/index.html
@@ -42,12 +42,13 @@
             <div class="text-box">
                 <p class="hbd-chatbox">
                     Habede Odyyyy! wkwkw udah tua bestiee aku gaiss udah 22 tahun ga tuh, btw wishnya yang baik-baik aja
-                    dunia akhirat deh pokoknya. Wish sendiri dulu aja ya nanti aku aminin. Pokoknya sehat dan sukses selalu bestie aku dikuliahan + temen magang yang paling dabest👍 hehe semoga dapet kerjaan yang enak ya dy! jujur kangen banget bangett hiks
+                    dunia akhirat deh pokoknya. Wish sendiri dulu aja ya nanti aku aminin. Pokoknya sehat dan sukses selalu bestie aku dikuliahan + temen magang yang paling dabest👍 
+                    hehe semoga dapet kerjaan yang enak ya dy! jujur kangen banget bangett hiks
                     tapi semoga kamu sehat selalu yaaa!
                     Makasih udah bertahan sampe disini yaaa... besok kita wisuda bareng!
                     Selamat memasuki dunia baruuuu yaa walaupun kita jarang ketemu atau chatan tapi please keep in touch!
                     Sampe kapanpun kamu tetep bestie aku hehe, maafin kalo aku punya salah yaa kalo bikin kesel juga maapin hehe
-                    Pokoknyaa Saranghaeyo <3
+                    Pokoknyaa Saranghaeyo❤️
                 </p>
                 <p class="fake-btn">Send</p>
             </div>
