--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
         <div class="four">
             <div class="text-box">
                 <p class="hbd-chatbox">
-                    Habede Odyyyy! wkwkw udah tua bestiee aku gaiss udah 22 tahun ga tuh, btw wishnya yang baik-baik aja
-                    dunia akhirat deh pokoknya. Wish sendiri dulu aja ya nanti aku aminin. Pokoknya sehat dan sukses selalu bestie aku dikuliahan + temen magang yang paling dabest👍 
+                    Habede Odyyyy! wkwkw udah tua bestiee aku gaiss udah 22 tahun! btw wishnya yang baik-baik aja
+                    dunia akhirat deh pokoknya. Wish sendiri dulu aja ya nanti aku aminin. Intinyq sehat dan sukses selalu bestie aku dikuliahan + temen magang yang paling dabest👍 
                     hehe semoga dapet kerjaan yang enak ya dy! jujur kangen banget bangett hiks
                     tapi semoga kamu sehat selalu yaaa!
                     Makasih udah bertahan sampe disini yaaa... besok kita wisuda bareng!
@@ -56,7 +56,7 @@
 
         <div class="five">
             <p class="idea-1">Sebenernya aku mau ngucapin di WhatsApp...</p>
-            <p class="idea-2">Tapi gajadiii.....karna aku tau pasti telat juga ini ngucapinnya hehe</p>
+            <p class="idea-2">Tapi gajadiii.....karna aku tau pasti telat juga ini ngucapinnya hehe (sengaja) </p>
             <p class="idea-3">
                 Dan soalnya dah biasa juga, jadi aku bikin ini aja yakan biar kamu...<br>
                 <strong>Happy!</strong>
