--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div class="four">
             <div class="text-box">
                 <p class="hbd-chatbox">
-                    Habede Odyyyy! wkwkw udah tua bestiee aku gaiss udah 22 tahun! btw wishnya yang baik-baik aja
+                    Habede Odyy Cantikkk! wkwkw udah tua bestiee aku gaiss udah 22 tahun! btw wishnya yang baik-baik aja
                     dunia akhirat deh pokoknya. Wish sendiri dulu aja ya nanti aku aminin. Intinya sehat dan sukses selalu bestie aku dikuliahan + temen magang yang paling dabest👍 
                     hehe semoga dapet kerjaan yang enak ya dy! jujur kangen banget bangett hiks
                     tapi semoga kamu sehat selalu yaaa!
