--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <div class="text-box">
                 <p class="hbd-chatbox">
                     Habede Odyy Cantikkk! wkwkw udah tua bestiee aku gaiss udah 22 tahun! btw wishnya yang baik-baik aja
-                    dunia akhirat deh pokoknya. Wish sendiri dulu aja ya nanti aku aminin. Intinya sehat dan sukses selalu bestie aku dikuliahan + temen magang yang paling dabest👍 
+                    dunia akhirat deh pokoknya. Wish sendiri dulu aja ya nanti aku aminin. Intinya sehat dan sukses selalu bestie jalur himsi + temen magang yang paling dabest👍 
                     hehe semoga dapet kerjaan yang enak ya dy! jujur kangen banget bangett hiks
                     tapi semoga kamu sehat selalu yaaa!
                     Makasih udah bertahan sampe disini yaaa... besok kita wisuda bareng!
